--- a/index.html
+++ b/index.html
@@ -66,25 +66,52 @@
             <h3 class="hero-subtitle">SPONSORS</h3>
             <ul class="hero-sponsors-list">
               <li class="sponsors-list-item">
-                <a href=""><img src="" alt="" /></a>
+                <a href=""
+                  ><img
+                    src="./img/Grammarly.png"
+                    alt="Grammarly"
+                    width="156"
+                    height="60"
+                /></a>
               </li>
               <li class="sponsors-list-item">
-                <a href=""><img src="" alt="" /></a>
+                <a href=""
+                  ><svg class="sponsors-icon">
+                    <use href="./img/icons.svg#icon-1"></use></svg
+                ></a>
               </li>
               <li class="sponsors-list-item">
-                <a href=""><img src="" alt="" /></a>
+                <a href=""
+                  ><svg class="sponsors-icon">
+                    <use href="./img/icons.svg#icon-uz"></use></svg
+                ></a>
               </li>
               <li class="sponsors-list-item">
-                <a href=""><img src="" alt="" /></a>
+                <a href=""
+                  ><svg class="sponsors-icon">
+                    <use href="./img/icons.svg#icon-Silpo"></use></svg
+                ></a>
               </li>
               <li class="sponsors-list-item">
-                <a href=""><img src="" alt="" /></a>
+                <a href=""
+                  ><svg class="sponsors-icon">
+                    <use href="./img/icons.svg#icon-bodo"></use></svg
+                ></a>
               </li>
               <li class="sponsors-list-item">
-                <a href=""><img src="" alt="" /></a>
+                <a href=""
+                  ><img
+                    src="./img/Samsung.png"
+                    alt="Samsung"
+                    width="156"
+                    height="60"
+                /></a>
               </li>
               <li class="sponsors-list-item">
-                <a href=""><img src="" alt="" /></a>
+                <a href=""
+                  ><svg class="sponsors-icon">
+                    <use href="./img/icons.svg#icon-naftogaz"></use></svg
+                ></a>
               </li>
             </ul>
           </div>
@@ -156,126 +183,134 @@
       <section class="equipment">
         <div class="container">
           <h2 class="equipment-title">Learn more about the equipment</h2>
-          <ul class="equipment-list"><div class="equipment-item">
-            <h3 class="equipment-subtitle">DJI Mavic 3T Enterprise Thermal</h3>
-            <p class="equipment-subtitle-text">for 23rd Mechanized Brigade</p>
-            <div class="equipment-content">
-              <img class="equipment-image" src="" alt="" />
-              <div class="equipment-text-content">
-                <p class="equipment-text">
-                  With a mechanical shutter, a 56× zoom camera, and an RTK
-                  module for centimeter-level precision, the Mavic 3E brings
-                  mapping and mission efficiency to new heights. A thermal
-                  version is available for firefighting, search and rescue,
-                  inspection, and night operations.
-                </p>
-                <ul>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">56× Hybrid Zoom</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">4/3 CMOS Wide Camera</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">45-min Max Flight Time</p>
-                  </li>
-                </ul>
+          <ul class="equipment-list">
+            <li class="equipment-item">
+              <h3 class="equipment-subtitle">
+                DJI Mavic 3T Enterprise Thermal
+              </h3>
+              <p class="equipment-subtitle-text">for 23rd Mechanized Brigade</p>
+              <div class="equipment-content">
+                <img class="equipment-image" src="" alt="" />
+                <div class="equipment-text-content">
+                  <p class="equipment-text">
+                    With a mechanical shutter, a 56× zoom camera, and an RTK
+                    module for centimeter-level precision, the Mavic 3E brings
+                    mapping and mission efficiency to new heights. A thermal
+                    version is available for firefighting, search and rescue,
+                    inspection, and night operations.
+                  </p>
+                  <ul>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">56× Hybrid Zoom</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">4/3 CMOS Wide Camera</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">45-min Max Flight Time</p>
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="equipment-item">
-            <h3 class="equipment-subtitle">Volkswagen T4 Diesel</h3>
-            <p class="equipment-subtitle-text">for 47th Mechanized Brigade</p>
-            <div class="equipment-content">
-              <img class="equipment-image" src="" alt="" />
-              <div class="equipment-text-content">
-                <p class="equipment-text">
-                  The T4 features a front-mounted, water-cooled engine, adopting
-                  a monocoque construction, departing from the traditional
-                  body-on-frame design. This structural approach results in
-                  reduced weight, increased rigidity, and improved crash safety.
-                  Adaptability and practicality of the vehicle are unparalleled.
-                </p>
-                <ul>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Water-cooled engine</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Diesel-fuelled</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Modified in 2022</p>
-                  </li>
-                </ul>
+            </li>
+            <li class="equipment-item">
+              <h3 class="equipment-subtitle">Volkswagen T4 Diesel</h3>
+              <p class="equipment-subtitle-text">for 47th Mechanized Brigade</p>
+              <div class="equipment-content">
+                <img class="equipment-image" src="" alt="" />
+                <div class="equipment-text-content">
+                  <p class="equipment-text">
+                    The T4 features a front-mounted, water-cooled engine,
+                    adopting a monocoque construction, departing from the
+                    traditional body-on-frame design. This structural approach
+                    results in reduced weight, increased rigidity, and improved
+                    crash safety. Adaptability and practicality of the vehicle
+                    are unparalleled.
+                  </p>
+                  <ul>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Water-cooled engine</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Diesel-fuelled</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Modified in 2022</p>
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="equipment-item">
-            <h3 class="equipment-subtitle">Motorola DM4600e VHF</h3>
-            <p class="equipment-subtitle-text">for 95th Air Assault Brigade</p>
-            <div class="equipment-content">
-              <img class="equipment-image" src="" alt="" />
-              <div class="equipment-text-content">
-                <p class="equipment-text">
-                  The Motorola DM4600 VHF range allows for excellent coverage in
-                  open spaces, while the UHF range provides better penetration
-                  through obstacles like buildings and foliage. It boasts a loud
-                  front-facing speaker that ensures clear audio even in noisy
-                  environments.
-                </p>
-                <ul>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Intelligent audio</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Wide range</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Large display</p>
-                  </li>
-                </ul>
+            </li>
+            <li class="equipment-item">
+              <h3 class="equipment-subtitle">Motorola DM4600e VHF</h3>
+              <p class="equipment-subtitle-text">
+                for 95th Air Assault Brigade
+              </p>
+              <div class="equipment-content">
+                <img class="equipment-image" src="" alt="" />
+                <div class="equipment-text-content">
+                  <p class="equipment-text">
+                    The Motorola DM4600 VHF range allows for excellent coverage
+                    in open spaces, while the UHF range provides better
+                    penetration through obstacles like buildings and foliage. It
+                    boasts a loud front-facing speaker that ensures clear audio
+                    even in noisy environments.
+                  </p>
+                  <ul>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Intelligent audio</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Wide range</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Large display</p>
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="equipment-item">
-            <h3 class="equipment-subtitle">Drone Hunter XR</h3>
-            <p class="equipment-subtitle-text">for 3rd Assault Brigade</p>
-            <div class="equipment-content">
-              <img class="equipment-image" src="" alt="" />
-              <div class="equipment-text-content">
-                <p class="equipment-text">
-                  Drone Hunter XR is a rifle-type drone jamming gun with an
-                  intuitive design for quick onsite responses to drone threats.
-                  Drone Hunter XR is capable of neutralizing commercial drone
-                  frequencies including ISM band and GNSS L1 & L2 up to 1km.
-                </p>
-                <ul>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">1km jamming band</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Recognises ISM band</p>
-                  </li>
-                  <li>
-                    <svg></svg>
-                    <p class="equipment-svg-desc">Fast charging</p>
-                  </li>
-                </ul>
+            </li>
+            <li class="equipment-item">
+              <h3 class="equipment-subtitle">Drone Hunter XR</h3>
+              <p class="equipment-subtitle-text">for 3rd Assault Brigade</p>
+              <div class="equipment-content">
+                <img class="equipment-image" src="" alt="" />
+                <div class="equipment-text-content">
+                  <p class="equipment-text">
+                    Drone Hunter XR is a rifle-type drone jamming gun with an
+                    intuitive design for quick onsite responses to drone
+                    threats. Drone Hunter XR is capable of neutralizing
+                    commercial drone frequencies including ISM band and GNSS L1
+                    & L2 up to 1km.
+                  </p>
+                  <ul>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">1km jamming band</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Recognises ISM band</p>
+                    </li>
+                    <li>
+                      <svg></svg>
+                      <p class="equipment-svg-desc">Fast charging</p>
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </div>
-          </div>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="about">
         <div class="container">
@@ -298,7 +333,7 @@
               </p>
             </div>
           </div>
-        </div></span>
+        </div>
       </section>
       <section class="auction">
         <div class="container">
@@ -311,8 +346,9 @@
                   61 x 86 cm |  gouache on paper | 1978
                 </p>
                 <div class="auction-card-wrap">
-                  <button type="button" class="auction-card">Learn more</button
-                  ><button type="button" class="auction-card">
+                  <button type="button" class="auction-card-button">
+                    Learn more</button
+                  ><button type="button" class="auction-card-button">
                     Place a bid
                   </button>
                 </div>
@@ -327,8 +363,9 @@
                   61.2 x 85.7 cm | gouache on paper | 1982
                 </p>
                 <div class="auction-card-wrap">
-                  <button type="button" class="auction-card">Learn more</button
-                  ><button type="button" class="auction-card">
+                  <button type="button" class="auction-card-button">
+                    Learn more</button
+                  ><button type="button" class="auction-card-button">
                     Place a bid
                   </button>
                 </div>
@@ -341,8 +378,9 @@
                   61.2 x 85.8 cm | gouache on paper | 1983
                 </p>
                 <div class="auction-card-wrap">
-                  <button type="button" class="auction-card">Learn more</button
-                  ><button type="button" class="auction-card">
+                  <button type="button" class="auction-card-button">
+                    Learn more</button
+                  ><button type="button" class="auction-card-button">
                     Place a bid
                   </button>
                 </div>
@@ -358,8 +396,9 @@
                   61.3 x 85.5 cm | gouache on paper | 1983
                 </p>
                 <div class="auction-card-wrap">
-                  <button type="button" class="auction-card">Learn more</button
-                  ><button type="button" class="auction-card">
+                  <button type="button" class="auction-card-button">
+                    Learn more</button
+                  ><button type="button" class="auction-card-button">
                     Place a bid
                   </button>
                 </div>
@@ -370,7 +409,7 @@
       </section>
       <section class="reviews">
         <div class="container">
-          <h2 class="reviews-title"></h2>
+          <h2 class="reviews-title">Reviews</h2>
           <div class="reviews-wrap">
             <div class="reviews-card">
               <img src="" alt="" class="reviews-image" />
