--- a/index.html
+++ b/index.html
@@ -153,13 +153,12 @@
         <div class="container">
           <div class="info-wrap">
             <div class="info-card small">
-              <div>
-                <svg class="info-small-up">
-                  <use href="./img/icons.svg#icon-flower2right"></use>
-                </svg>
-              </div>
+              <svg class="info-small-up">
+                <use href="./img/icons.svg#icon-flower2right"></use>
+              </svg>
               <h2 class="card-title">7,593</h2>
               <p class="card-text">Contributors already joined</p>
+              <button class="card-learn-more" type="button">learn more</button>
             </div>
             <div class="info-card medium">
               <svg class="info-medium-up">
@@ -167,6 +166,7 @@
               </svg>
               <h2 class="card-title">327</h2>
               <p class="card-text">Masterpieces found their home</p>
+              <button class="card-learn-more" type="button">LEARN MORE</button>
               <svg class="info-medium-down">
                 <use href="./img/icons.svg#icon-stemleft"></use>
               </svg>
@@ -192,6 +192,7 @@
               </svg>
               <h2 class="card-title">14</h2>
               <p class="card-text">Days left till the end of the auction</p>
+              <button class="card-learn-more" type="button">LEARN MORE</button>
               <svg class="info-medium-down">
                 <use href="./img/icons.svg#icon-stemleft"></use>
               </svg>
@@ -199,7 +200,7 @@
             <div class="info-card small">
               <h2 class="card-title">283 m</h2>
               <p class="card-text">Collected over last 6 months</p>
-
+              <button class="card-learn-more" type="button">LEARN MORE</button>
               <svg class="info-small-down">
                 <use href="./img/icons.svg#icon-flower2left"></use>
               </svg>
