--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <li class="sponsors-list-item">
                 <a href=""
                   ><svg class="sponsors-icon">
-                    <use href="/img/icons.svg#icon-silpo"></use></svg
+                    <use href="./img/icons.svg#icon-Silpo"></use></svg
                 ></a>
               </li>
               <li class="sponsors-list-item">
@@ -153,57 +153,29 @@
         <div class="container">
           <div class="info-wrap">
             <div class="info-card small">
-              <svg class="info-small-up">
-                <use href="./img/icons.svg#icon-flower2right"></use>
-              </svg>
               <h2 class="card-title">7,593</h2>
               <p class="card-text">Contributors already joined</p>
-              <button class="card-learn-more" type="button">learn more</button>
             </div>
             <div class="info-card medium">
-              <svg class="info-medium-up">
-                <use href="./img/icons.svg#icon-stemright"></use>
-              </svg>
               <h2 class="card-title">327</h2>
               <p class="card-text">Masterpieces found their home</p>
-              <button class="card-learn-more" type="button">LEARN MORE</button>
-              <svg class="info-medium-down">
-                <use href="./img/icons.svg#icon-stemleft"></use>
-              </svg>
             </div>
             <div class="info-card large">
-              <svg class="info-large-up">
-                <use href="./img/icons.svg#icon-flowerdown"></use>
-              </svg>
-              <h2 class="card-title main">78 m</h2>
-              <p class="card-text main">
+              <h2 class="card-title">78 m</h2>
+              <p class="card-text">
                 Already collected in the auction Join today to support Ukraine
               </p>
               <button class="card-button" type="button">
                 MAKE CONTRIBUTION
               </button>
-              <svg class="info-large-down">
-                <use href="./img/icons.svg#icon-flowerup"></use>
-              </svg>
             </div>
             <div class="info-card medium">
-              <svg class="info-medium-up">
-                <use href="./img/icons.svg#icon-stemright"></use>
-              </svg>
               <h2 class="card-title">14</h2>
               <p class="card-text">Days left till the end of the auction</p>
-              <button class="card-learn-more" type="button">LEARN MORE</button>
-              <svg class="info-medium-down">
-                <use href="./img/icons.svg#icon-stemleft"></use>
-              </svg>
             </div>
             <div class="info-card small">
               <h2 class="card-title">283 m</h2>
               <p class="card-text">Collected over last 6 months</p>
-              <button class="card-learn-more" type="button">LEARN MORE</button>
-              <svg class="info-small-down">
-                <use href="./img/icons.svg#icon-flower2left"></use>
-              </svg>
             </div>
           </div>
         </div>
