--- a/index.html
+++ b/index.html
@@ -218,7 +218,11 @@
               </h3>
               <p class="equipment-subtitle-text">for 23rd Mechanized Brigade</p>
               <div class="equipment-content">
-                <img class="equipment-image" src="" alt="" />
+                <img
+                  class="equipment-image"
+                  src="./img/dji-mavic.png"
+                  alt="DJI Mfvic"
+                />
                 <div class="equipment-text-content">
                   <p class="equipment-text">
                     With a mechanical shutter, a 56× zoom camera, and an RTK
@@ -229,15 +233,21 @@
                   </p>
                   <ul>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-hybrid-zoom"></use>
+                      </svg>
                       <p class="equipment-svg-desc">56× Hybrid Zoom</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-cmos-wide-camera"></use>
+                      </svg>
                       <p class="equipment-svg-desc">4/3 CMOS Wide Camera</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-clock-45"></use>
+                      </svg>
                       <p class="equipment-svg-desc">45-min Max Flight Time</p>
                     </li>
                   </ul>
@@ -248,7 +258,11 @@
               <h3 class="equipment-subtitle">Volkswagen T4 Diesel</h3>
               <p class="equipment-subtitle-text">for 47th Mechanized Brigade</p>
               <div class="equipment-content">
-                <img class="equipment-image" src="" alt="" />
+                <img
+                  class="equipment-image"
+                  src="./img/volkswagen.png"
+                  alt="Volkswagen"
+                />
                 <div class="equipment-text-content">
                   <p class="equipment-text">
                     The T4 features a front-mounted, water-cooled engine,
@@ -260,15 +274,23 @@
                   </p>
                   <ul>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use
+                          href="./img/icons.svg#icon-water-cooled-engine"
+                        ></use>
+                      </svg>
                       <p class="equipment-svg-desc">Water-cooled engine</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-diesel-fuelled"></use>
+                      </svg>
                       <p class="equipment-svg-desc">Diesel-fuelled</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-modified"></use>
+                      </svg>
                       <p class="equipment-svg-desc">Modified in 2022</p>
                     </li>
                   </ul>
@@ -281,7 +303,11 @@
                 for 95th Air Assault Brigade
               </p>
               <div class="equipment-content">
-                <img class="equipment-image" src="" alt="" />
+                <img
+                  class="equipment-image"
+                  src="./img/motorola.png"
+                  alt="Motorola"
+                />
                 <div class="equipment-text-content">
                   <p class="equipment-text">
                     The Motorola DM4600 VHF range allows for excellent coverage
@@ -292,15 +318,23 @@
                   </p>
                   <ul>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use
+                          href="./img/icons.svg#icon-intelligent-audio"
+                        ></use>
+                      </svg>
                       <p class="equipment-svg-desc">Intelligent audio</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-wide-range"></use>
+                      </svg>
                       <p class="equipment-svg-desc">Wide range</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-large-display"></use>
+                      </svg>
                       <p class="equipment-svg-desc">Large display</p>
                     </li>
                   </ul>
@@ -311,7 +345,11 @@
               <h3 class="equipment-subtitle">Drone Hunter XR</h3>
               <p class="equipment-subtitle-text">for 3rd Assault Brigade</p>
               <div class="equipment-content">
-                <img class="equipment-image" src="" alt="" />
+                <img
+                  class="equipment-image"
+                  src="./img/drone-hunter.png"
+                  alt="Drone Hunter"
+                />
                 <div class="equipment-text-content">
                   <p class="equipment-text">
                     Drone Hunter XR is a rifle-type drone jamming gun with an
@@ -322,15 +360,21 @@
                   </p>
                   <ul>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#jicon-jamming-band"></use>
+                      </svg>
                       <p class="equipment-svg-desc">1km jamming band</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-ism-band"></use>
+                      </svg>
                       <p class="equipment-svg-desc">Recognises ISM band</p>
                     </li>
                     <li>
-                      <svg></svg>
+                      <svg class="quipment-svg">
+                        <use href="./img/icons.svg#icon-fast-charging"></use>
+                      </svg>
                       <p class="equipment-svg-desc">Fast charging</p>
                     </li>
                   </ul>
