--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                   <ul>
                     <li>
                       <svg class="quipment-svg">
-                        <use href="./img/icons.svg#jicon-jamming-band"></use>
+                        <use href="./img/icons.svg#icon-jamming-band"></use>
                       </svg>
                       <p class="equipment-svg-desc">1km jamming band</p>
                     </li>
