--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
                 DJI Mavic 3T Enterprise Thermal
               </h3>
               <p class="equipment-subtitle-text">for 23rd Mechanized Brigade</p>
+              <button class="equipment-close-button">
+                <svg class="equipment-button-svg">
+                  <use href="./img/icons.svg#icon-close-plus-button"></use>
+                </svg>
+              </button>
               <div class="equipment-content">
                 <img
                   class="equipment-image"
@@ -257,6 +262,11 @@
             <li class="equipment-item">
               <h3 class="equipment-subtitle">Volkswagen T4 Diesel</h3>
               <p class="equipment-subtitle-text">for 47th Mechanized Brigade</p>
+              <button class="equipment-close-button">
+                <svg class="equipment-button-svg">
+                  <use href="./img/icons.svg#icon-close-plus-button"></use>
+                </svg>
+              </button>
               <div class="equipment-content">
                 <img
                   class="equipment-image"
@@ -302,6 +312,11 @@
               <p class="equipment-subtitle-text">
                 for 95th Air Assault Brigade
               </p>
+              <button class="equipment-close-button">
+                <svg class="equipment-button-svg">
+                  <use href="./img/icons.svg#icon-close-plus-button"></use>
+                </svg>
+              </button>
               <div class="equipment-content">
                 <img
                   class="equipment-image"
@@ -344,6 +359,11 @@
             <li class="equipment-item">
               <h3 class="equipment-subtitle">Drone Hunter XR</h3>
               <p class="equipment-subtitle-text">for 3rd Assault Brigade</p>
+              <button class="equipment-close-button">
+                <svg class="equipment-button-svg">
+                  <use href="./img/icons.svg#icon-close-plus-button"></use>
+                </svg>
+              </button>
               <div class="equipment-content">
                 <img
                   class="equipment-image"
