--- a/index.html
+++ b/index.html
@@ -407,7 +407,11 @@
       <section class="about">
         <div class="container">
           <div class="about-wrap">
-            <img src="" alt="" class="about-image" />
+            <img
+              src="./img/maria-primachenko-about.png"
+              alt="Maria Primachenko blue photo"
+              class="about-image"
+            />
             <div class="about-text-wrap">
               <h2 class="about-title">About Maryna Prymachenko</h2>
               <p class="about-text">
@@ -417,12 +421,22 @@
                 National Prize, she holds a prominent place among artists
                 of naïve art. Her unique world view and artistic style were
                 influenced by traditional Ukrainian ornaments, which she
-                incorporated into her works. Born into a peasant family in the
-                Kyiv region, Prymachenko suffered from polio during her
-                childhood. Undeterred, she learned embroidery from her mother
-                and later worked at the Central Experimental Workshop of the
-                Kyiv Museum of Ukrainian Art.
+                incorporated into her works.<br />
+                <br /><br /><br />
+                Born into a peasant family in the Kyiv region, Prymachenko
+                suffered from polio during her childhood. Undeterred, she
+                learned embroidery from her mother and later worked at
+                the Central Experimental Workshop of the Kyiv Museum of
+                Ukrainian Art.
               </p>
+              <div class="arrow-wrap">
+                <svg class="about-arrow">
+                  <use href="./img/icons.svg#icon-arrow-left"></use>
+                </svg>
+                <svg class="about-arrow">
+                  <use href="./img/icons.svg#icon-arrow-right"></use>
+                </svg>
+              </div>
             </div>
           </div>
         </div>
@@ -432,67 +446,77 @@
           <h2 class="auction-title"></h2>
           <ul class="auction-list">
             <li class="auction-item">
-              <div class="auction-card">
-                <h3 class="auction-card-subtitle">Our Army, Our Protectors</h3>
-                <p class="auction-card-text">
-                  61 x 86 cm |  gouache on paper | 1978
-                </p>
-                <div class="auction-card-wrap">
-                  <button type="button" class="auction-card-button">
-                    Learn more</button
-                  ><button type="button" class="auction-card-button">
-                    Place a bid
-                  </button>
+              <div class="auction-card first-image">
+                <div class="auction-card-content">
+                  <h3 class="auction-card-subtitle">
+                    Our Army, Our Protectors
+                  </h3>
+                  <p class="auction-card-text">
+                    61 x 86 cm |  gouache on paper | 1978
+                  </p>
+                  <div class="auction-card-wrap">
+                    <button type="button" class="auction-card-button">
+                      Learn more</button
+                    ><button type="button" class="auction-card-button">
+                      Place a bid
+                    </button>
+                  </div>
                 </div>
               </div>
             </li>
             <li class="auction-item">
-              <div class="auction-card">
-                <h3 class="auction-card-subtitle">
-                  A Dove Has Spread Her Wings and Asks for Peace
-                </h3>
-                <p class="auction-card-text">
-                  61.2 x 85.7 cm | gouache on paper | 1982
-                </p>
-                <div class="auction-card-wrap">
-                  <button type="button" class="auction-card-button">
-                    Learn more</button
-                  ><button type="button" class="auction-card-button">
-                    Place a bid
-                  </button>
+              <div class="auction-card second-image">
+                <div class="auction-card-content">
+                  <h3 class="auction-card-subtitle">
+                    A Dove Has Spread Her Wings and Asks for Peace
+                  </h3>
+                  <p class="auction-card-text">
+                    61.2 x 85.7 cm | gouache on paper | 1982
+                  </p>
+                  <div class="auction-card-wrap">
+                    <button type="button" class="auction-card-button">
+                      Learn more</button
+                    ><button type="button" class="auction-card-button">
+                      Place a bid
+                    </button>
+                  </div>
                 </div>
               </div>
             </li>
             <li class="auction-item">
-              <div class="auction-card">
-                <h3 class="auction-card-subtitle">Ukrainian Dancers</h3>
-                <p class="auction-card-text">
-                  61.2 x 85.8 cm | gouache on paper | 1983
-                </p>
-                <div class="auction-card-wrap">
-                  <button type="button" class="auction-card-button">
-                    Learn more</button
-                  ><button type="button" class="auction-card-button">
-                    Place a bid
-                  </button>
+              <div class="auction-card third-image">
+                <div class="auction-card-content">
+                  <h3 class="auction-card-subtitle">Ukrainian Dancers</h3>
+                  <p class="auction-card-text">
+                    61.2 x 85.8 cm | gouache on paper | 1983
+                  </p>
+                  <div class="auction-card-wrap">
+                    <button type="button" class="auction-card-button">
+                      Learn more</button
+                    ><button type="button" class="auction-card-button">
+                      Place a bid
+                    </button>
+                  </div>
                 </div>
               </div>
             </li>
             <li class="auction-item">
-              <div class="auction-card">
-                <h3 class="auction-card-subtitle">
-                  Ukrainian Bull, Three Years Old, Went Walking Through the
-                  Woods and Garners Strength
-                </h3>
-                <p class="auction-card-text">
-                  61.3 x 85.5 cm | gouache on paper | 1983
-                </p>
-                <div class="auction-card-wrap">
-                  <button type="button" class="auction-card-button">
-                    Learn more</button
-                  ><button type="button" class="auction-card-button">
-                    Place a bid
-                  </button>
+              <div class="auction-card fourth-image">
+                <div class="auction-card-content">
+                  <h3 class="auction-card-subtitle">
+                    Ukrainian Bull, Three Years Old, Went Walking Through the
+                    Woods and Garners Strength
+                  </h3>
+                  <p class="auction-card-text">
+                    61.3 x 85.5 cm | gouache on paper | 1983
+                  </p>
+                  <div class="auction-card-wrap">
+                    <button type="button" class="auction-card-button">
+                      Learn more</button
+                    ><button type="button" class="auction-card-button">
+                      Place a bid
+                    </button>
+                  </div>
                 </div>
               </div>
             </li>
