--- a/index.html
+++ b/index.html
@@ -430,12 +430,16 @@
                 Ukrainian Art.
               </p>
               <div class="arrow-wrap">
-                <svg class="about-arrow">
-                  <use href="./img/icons.svg#icon-arrow-left"></use>
-                </svg>
-                <svg class="about-arrow">
-                  <use href="./img/icons.svg#icon-arrow-right"></use>
-                </svg>
+                <button type="button" class="about-button">
+                  <svg class="about-arrow">
+                    <use href="./img/icons.svg#icon-arrow-left"></use>
+                  </svg>
+                </button>
+                <button type="button" class="about-button">
+                  <svg class="about-arrow">
+                    <use href="./img/icons.svg#icon-arrow-right"></use>
+                  </svg>
+                </button>
               </div>
             </div>
           </div>
